Modificação das ancoras

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <nav id="menuHeader" class="text-white pt-2  pb-1">
                 <ul id="ulMenu" class="fs-5">
                     <li class="listMenu"><a class="menuItens " href="./assets/html/chatAI.html">Chat IA</a></li>
-                    <li class="listMenu"><a class="menuItens" href="./assets/html/profile.html">Sobre o projeto</a></li>
-                    <li class="listMenu"><a class="menuItens" href="./assets/html/config.html">Perfil</a></li>
-                    <li class="listMenu" id="lastItemMenu"><a class="menuItens" href="./assets/html/aboutUS.html">Configurações</a></li>
+                    <li class="listMenu"><a class="menuItens" href="./assets/html/aboutUS.html">Sobre o projeto</a></li>
+                    <li class="listMenu"><a class="menuItens" href="./assets/html/profile.html">Perfil</a></li>
+                    <li class="listMenu" id="lastItemMenu"><a class="menuItens" href="./assets/html/config.html">Configurações</a></li>
                 </ul>
             </nav>
         </div>
