Modificação final do prototipo

--- a/assets/html/chatAI.html
+++ b/assets/html/chatAI.html
@@ -16,23 +16,23 @@
                 <button>
                     Novo chat<img src="../imgs/edit_square_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" id="newChatIcon" alt="imagem do botão">
                 </button>
-                <div id="todayLog" class="textCard mt-5 mb-5">
+                <div id="todayLog" class="textCard mt-5 mb-5 w-100">
                     <p class="textCardTitlle mb-4">Hoje</p>
-                    <p>Lorem impsum</p>
-                    <p>Lorem impsum</p>
-                    <p>Lorem impsum</p>
+                    <p class="pText">Lorem impsum</p>
+                    <p class="pText">Lorem impsum</p>
+                    <p class="pText">Lorem impsum</p>
                 </div>
                 <div id="yesterdayLog" class="textCard mb-5">
                     <p class="textCardTitlle mb-4">Ontem</p>
-                    <p>Lorem impsum</p>
-                    <p>Lorem impsum</p>
-                    <p>Lorem impsum</p>
+                    <p class="pText">Lorem impsum</p>
+                    <p class="pText">Lorem impsum</p>
+                    <p class="pText">Lorem impsum</p>
                 </div>
                 <div id="last7DaysLog" class="textCard mb-5">
                     <p class="textCardTitlle mb-4">Ultimos 7 dias</p>
-                    <p>Lorem impsum</p>
-                    <p>Lorem impsum</p>
-                    <p>Lorem impsum</p>
+                    <p class="pText">Lorem impsum</p>
+                    <p class="pText">Lorem impsum</p>
+                    <p class="pText">Lorem impsum</p>
                 </div>
             </section>
             <section id="secondColumn" class="p-3">
