--- a/index.html
+++ b/index.html
@@ -52,37 +52,39 @@
 
     <footer>
         <div class="container-fluid text-white text-center p-5 d-flex flex-column justify-content-center align-items-center">
-            <h1>Videos de apresentação:</h1>
-            <hr id="hrText">
+            <h1 class="mb-0">Videos de apresentação:</h1>
+            <hr id="hrText" class="mt-1">
             <div class=" mt-5 row" id="rowVideoPitch1">
-                <div class="col-lg-12 d-flex justify-content-center align-items-center gap-5">
+                <div class="columnContainer  col-lg-12 d-flex justify-content-center align-items-center gap-5">
                     <div class="containerText">
-                        <h2>Video pitch 1:</h2>
+                        <h2 class="h2Text">Video pitch 1:</h2>
                         <p>
-                            is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever
+                            Apresentação da ideia
                         </p>
                     </div>
-                    <div class="videoPitch"></div>
+                    <div class="videoContainer">
+                        <iframe class="videoIframe"  src="https://player.vimeo.com/video/1001792919?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="VideoPitch1"></iframe>
+                    </div>
                 </div>
             </div>
             <div class="row mt-5" id="rowVideoPitch2">
-                <div class="col-lg-12 d-flex justify-content-center align-items-center gap-5">
+                <div class="columnContainer col-lg-12 d-flex justify-content-center align-items-center gap-5">
                     <div class="containerText">
-                        <h2>Video pitch 2:</h2>
+                        <h2 class="h2Text">Video pitch 2:</h2>
                         <p>
-                            is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever
+                            Apresentação do prototipo funcional
                         </p>
                     </div>
-                    <div class="videoPitch"></div>
+                    <div class="videoContainer">
+                        <iframe class="videoIframe" src="https://player.vimeo.com/video/1004508853?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="VP2"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
 
-
-
+    <script src="https://player.vimeo.com/api/player.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
     <script src="assets/js/index.js"></script>
     
 </body>
