--- a/assets/html/aboutUS.html
+++ b/assets/html/aboutUS.html
@@ -44,7 +44,7 @@
         </div>
         <div id="containerGrid" class="container mt-5">
             <div class="row" id="containerCard">
-                <div class="col-xl-6 d-flex justify-content-around align-items-center gap-4">
+                <div class="col-xl-12 d-flex justify-content-around align-items-center gap-4">
                     <div class="profileCard text-white d-flex flex-column justify-content-center align-items-center text-center text-wrap">
                         <img class="imgPhoto img-fluid" src="../imgs/AngeloPhoto.jpg" alt="">
                         <h2>Angelo Rafael</h2>
@@ -56,19 +56,6 @@
                         <p>Atuou na criação dos vídeos e no design. </p>
                     </div>
                 </div>
-                <div class="col-xl-6 d-flex align-items-center justify-content-around gap-4 p-2">
-                    <div class="profileCard text-white d-flex flex-column justify-content-center align-items-center text-center text-wrap">
-                        <img class="imgPhoto img-fluid"  src="../imgs/YasminPhoto.png" alt="">
-                        <h2>Yasmin Kimura</h2>
-                        <p>Contribuiu para o aprimoramento do design</p>
-                    </div>
-                    <div class="profileCard text-white d-flex flex-column justify-content-center align-items-center text-center text-wrap">
-                        <img class="imgPhoto img-fluid" src="../imgs/AndréPhoto.jpg" alt="">
-                        <h2>André Flores</h2>
-                        <p>Contribuiu para o aprimoramento do design</p>
-                    </div>
-                    </div>
-            </div>
         </div>
     </main>
 
@@ -76,10 +63,11 @@
         <div id="footerContainer" class="container-fluid p-0 text-center text-white p-0">
             <h1>Tecnologias utilizadas durante a criação do projeto:</h1>
             <hr>
-            <ul class="d-flex justify-content-center align-items-center gap-5">
+            <ul class="d-flex justify-content-center align-items-center gap-5 flex-wrap">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
+                <li>Bootstrap</li>
             </ul>
         </div>
     </footer>
